# image-viewer

./: .gitignore  Cargo.toml
src/: app.rs  image.rs  main.rs  viewer.rs
src/image/: avif.rs  cleanup.rs  gif.rs  metadata.rs  webp.rs
