[package]
name = "image-viewer"
version = "0.1.0"
edition = "2024"

[features]
debug-avif = []

[dependencies]
egui-wgpu = "0.33"
egui = "0.33"
egui-winit = "0.33"

ctrlc = "3.2.0"

tokio = {version = "1.48", features = ["rt", "rt-multi-thread", "fs", "sync", "macros", "time"]}

rfd = "0.15"

lockfree = "0.5"

zenavif-parse = {git = "https://github.com/w-utter/zenavif-parse", branch = "pict-alpha-track"}

dav1d = "0.11"

num-traits = "0.2"

image-webp = {git = "https://github.com/image-rs/image-webp"}

gif = "0.14"
